# MyM5Stick

./: .gitignore  CMakeLists.txt  README.md  Sniffer.h  makefile  platformio.ini  plot.py  toDo.md
BLE_scan/src/: scann.ino
ESP32WifiBeaconSniff/src/: sniff.ino
WiFi_Sniffer/: platformio.ini
inspirations/BLE_scan/: platformio.ini
inspirations/BT_spike/src/: ble_beacon.ino
inspirations/WiFi_Sniffer/src/: functions.h
integration_tests/: setup.py
previous_idea/: Setup.hpp  Sniffer.cpp  Sniffer.hpp  Wrapper.hpp  wifi_ieee80211_packet.hpp
previous_idea/integration_tests/: run_integration_tests.sh
python_testing/: requirements.txt  test_skeleton.py
python_testing/examples/: foo_provider.py  mymodule.py  python_pytest.py  real_test.py  test_cheatsheet.py  test_mymodule.py  test_pytest_basic_assertions.py  test_pytest_fixtures.py  test_pytest_mocker.py  test_pytest_mocking_and_patching.py  test_pytest_parametric_tests.py  test_unittest_basic_assertions.py  test_unittest_mocking_and_patching.py  test_unittest_working_with_fixtures.py
python_testing/excersises/ElectricalCircuit/: ElectricalCircuit.py  test_ElectricalCircuit.py  (+2 more)
src/: Animation.c  Animation.h  Beacon.hpp  Checks.h  Display.hpp  FactoryTest.ino  Geometry.h  ISniffer.h  IWifiWrapper.h  Lcd.hpp  Machine.hpp  MyWatch.ino  Setup.hpp  SnifferWifi.hpp  Utils.hpp  WiFiScan.ino  WifiSniffer.cpp  WifiSniffer.h  WifiSniffer.hpp  WifiWrapper.cpp  WifiWrapper.h  Wrapper.cpp  Wrapper.hpp  tools.h  wifi_ieee80211_packet.h
tests/: WifiWrapperMock.hpp  esp_wifi_types.h  gtestCheck.cpp
unit_tests/: test.cpp
(+13 files in other folders)
